--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,8 +12,9 @@
     "react-dom": "^17.0.2",
     "react-paypal-button-v2": "^2.6.3",
     "react-redux": "^7.2.5",
+    "react-responsive-carousel": "^3.2.22",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^4.0.3",
     "redux": "^4.1.1",
     "web-vitals": "^1.1.2"
   },
